@@ -58,7 +58,7 @@ public class LRUEvictorTestBase extends EvictorTestBase {
       Assert.assertNotNull(plan);
       Assert.assertTrue(plan.toMove().isEmpty());
       Assert.assertEquals(1, plan.toEvict().size());
-      long toEvictBlockId = plan.toEvict().get(0);
+      long toEvictBlockId = plan.toEvict().get(0).getFirst();
       Assert.assertEquals(BLOCK_ID + i, toEvictBlockId);
 
       access(toEvictBlockId);
@@ -121,7 +121,7 @@ public class LRUEvictorTestBase extends EvictorTestBase {
       // least recently used cached block in the second tier will be evicted to hold blocks moved
       // from first tier
       Assert.assertEquals(1, plan.toEvict().size());
-      long blockIdEvictedInSecondTier = plan.toEvict().get(0);
+      long blockIdEvictedInSecondTier = plan.toEvict().get(0).getFirst();
       Assert.assertEquals(BLOCK_ID + nDirInFirstTier + i, blockIdEvictedInSecondTier);
 
       access(blockIdMovedInFirstTier);
@@ -157,14 +157,14 @@ public class LRUEvictorTestBase extends EvictorTestBase {
     // 2 blocks to move. The first one should be moved the 3rd dir as it has max free space.
     long blockId = plan.toMove().get(0).getFirst();
     Assert.assertEquals(101, blockId);
-    BlockStoreLocation dstLocation = plan.toMove().get(0).getSecond();
+    BlockStoreLocation dstLocation = plan.toMove().get(0).getSecond().getSecond();
     Assert.assertEquals(thirdDirSecondTier, dstLocation);
 
     // The second one should be moved the 2nd dir because after the first move the second dir
     // has the max free space.
     blockId = plan.toMove().get(1).getFirst();
     Assert.assertEquals(102, blockId);
-    dstLocation = plan.toMove().get(1).getSecond();
+    dstLocation = plan.toMove().get(1).getSecond().getSecond();
     Assert.assertEquals(secondDirSecondTier, dstLocation);
 
     cache(SESSION_ID, 107, 10000, 1, 0);
@@ -180,25 +180,25 @@ public class LRUEvictorTestBase extends EvictorTestBase {
     Assert.assertEquals(1, plan.toEvict().size());
     Assert.assertEquals(3, plan.toMove().size());
 
-    blockId = plan.toEvict().get(0);
+    blockId = plan.toEvict().get(0).getFirst();
     Assert.assertEquals(107, blockId);
 
     // 3 blocks to move. The first one should be moved the 3rd dir as it has max free space.
     blockId = plan.toMove().get(0).getFirst();
     Assert.assertEquals(103, blockId);
-    dstLocation = plan.toMove().get(0).getSecond();
+    dstLocation = plan.toMove().get(0).getSecond().getSecond();
     Assert.assertEquals(thirdDirSecondTier, dstLocation);
 
     // The other two should be moved the 1st dir because the 1st dir has the max free space
     // after evicting block 107.
     blockId = plan.toMove().get(1).getFirst();
     Assert.assertEquals(104, blockId);
-    dstLocation = plan.toMove().get(1).getSecond();
+    dstLocation = plan.toMove().get(1).getSecond().getSecond();
     Assert.assertEquals(firstDirSecondTier, dstLocation);
 
     blockId = plan.toMove().get(2).getFirst();
     Assert.assertEquals(105, blockId);
-    dstLocation = plan.toMove().get(1).getSecond();
+    dstLocation = plan.toMove().get(1).getSecond().getSecond();
     Assert.assertEquals(firstDirSecondTier, dstLocation);
   }
 }
